// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductPrice /> component its snapshot matches story Default 1`] = `
.c2 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 {
  color: #161616;
  font: 600 1rem/1.5rem 'IBM Plex Sans',Arial,sans-serif;
  margin: 0;
}

.c1 > span > div {
  margin-left: 0.5rem;
  display: inline;
}

.c1 > span > div:first-of-type {
  margin-left: 0;
}

.c0 {
  margin-bottom: 2rem;
}

@media (min-width:672px) {
  .c1 {
    margin: 0.75rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        <div
          class="price-list"
        >
          <span
            class="value"
          >
            €699
          </span>
        </div>
        <div
          class="price-offer"
        >
          <span
            class="value"
          >
            €649
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`<ProductPrice /> component its snapshot matches story OnlyListPrice 1`] = `
.c2 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c1 {
  color: #161616;
  font: 600 1rem/1.5rem 'IBM Plex Sans',Arial,sans-serif;
  margin: 0;
}

.c1 > span > div {
  margin-left: 0.5rem;
  display: inline;
}

.c1 > span > div:first-of-type {
  margin-left: 0;
}

.c0 {
  margin-bottom: 2rem;
}

@media (min-width:672px) {
  .c1 {
    margin: 0.75rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        <span
          class="value"
        >
          €1,349
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<ProductPrice /> component its snapshot matches story Skeleton 1`] = `
.c2 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c2::before {
  content: '\\00a0';
}

.c1 {
  color: #161616;
  font: 600 1rem/1.5rem 'IBM Plex Sans',Arial,sans-serif;
  margin: 0;
}

.c1 > span > div {
  margin-left: 0.5rem;
  display: inline;
}

.c1 > span > div:first-of-type {
  margin-left: 0;
}

.c0 {
  margin-bottom: 2rem;
}

@media (min-width:672px) {
  .c1 {
    margin: 0.75rem 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;
